added API implementation to project

--- a/project-b/public/products.html
+++ b/project-b/public/products.html
@@ -44,6 +44,14 @@
         <div class="product-grid-list">
 
         </div>
+
+        <h3>API Usage - Displaying images</h3>
+        <section id="unsplash-section">
+            <h2>Unsplash Images</h2>
+            <div class="unsplash-images">
+                <!-- Images will be dynamically populated here -->
+            </div>
+        </section>
     </main>
     <hr>
 
